--- a/package.json
+++ b/package.json
@@ -1,4 +1,30 @@
 {
   "name": "RxJS",
-  "packageManager": "yarn@4.2.1"
+  "packageManager": "yarn@4.2.1",
+
+  "scripts": {
+    "lint": "eslint --fix .",
+    "build": "webpack --config webpack.dev.config",
+    "start:dev": "webpack serve --config webpack.dev.config",
+    "start": "webpack serve --config webpack.prod.config"
+  },
+
+
+  "devDependencies": {
+    "@babel/cli": "^7.24.5",
+    "@babel/core": "^7.24.5",
+    "@babel/preset-env": "^7.24.5",
+    "@eslint/js": "^9.2.0",
+    "babel-loader": "^9.1.3",
+    "css-loader": "^7.1.1",
+    "eslint": "^9.2.0",
+    "globals": "^15.1.0",
+    "html-webpack-plugin": "^5.6.0",
+    "jest": "^29.7.0",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
+    "webpack-merge": "^5.10.0"
+  }
 }
